fix text alignment bugs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,6 +152,10 @@ code {
     text-align:center;
     margin-bottom:1rem;
     transition: 0.5s box-shadow ease-in-out;
+    display:flex;
+    flex-direction:row;
+    align-items:center;
+    justify-content:center;
 }
 
 footer {
